# after-image-py

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
LICENSES/: datamoshing-UNLICENSE.txt
models/yolov8n_ncnn_model/: metadata.yaml  model.ncnn.param
src/after_image/: __main__.py  debug.py  effects.py  model.py  recorder.py  tracker.py
src/after_image/datamosh/: __main__.py  mosh.py  pipeline.py  player.py  worker.py
src/after_image/multiclip/: __main__.py  player.py
src/after_image/snapshot/: __main__.py  debug.py
